--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       position: absolute;
       top: 12%;
       left: 8%;
-      width: 80%;
+      width: 84%;
       height: 76%;
       overflow: hidden;
       pointer-events: none;
@@ -44,13 +44,13 @@
     #girl {
       position: absolute;
       bottom: 0;
-      width: 20%;
+      width: 18%; /* 更大女孩 */
       pointer-events: auto;
     }
 
     .flower {
       position: absolute;
-      width: 40%; 
+      width: 38%; /* 更大花朵 */
       pointer-events: auto;
     }
 
@@ -66,12 +66,12 @@
 
     #score {
       top: 2%;
-      left: 6%;
+      left: 4%;
     }
 
     #lives {
       top: 8%;
-      left: 6%;
+      left: 4%;
     }
 
     #gameOver {
@@ -237,6 +237,7 @@
   </script>
 </body>
 </html>
+
 
 
 <!-- <!DOCTYPE html>
