--- a/index.html
+++ b/index.html
@@ -1,255 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Catch the Flowers</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      touch-action: manipulation;
-    }
-
-    body {
-      margin: 0;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    .frame-container {
-      position: relative;
-      width: 100vw;
-      height: 100vh;
-      background-image: url("backg.png"); /* 用你的背景图名替换 */
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-      overflow: hidden;
-    }
-
-    #game {
-      position: absolute;
-      top: 12%;
-      left: 8%;
-      width: 84%;
-      height: 76%;
-      overflow: hidden;
-      pointer-events: none;
-    }
-
-    #girl {
-      position: absolute;
-      bottom: 0;
-      width: 18%; /* 更大女孩 */
-      pointer-events: auto;
-    }
-
-    .flower {
-      position: absolute;
-      width: 38%; /* 更大花朵 */
-      pointer-events: auto;
-    }
-
-    #score,
-    #lives {
-      position: absolute;
-      font-size: clamp(18px, 3.2vw, 30px);
-      font-family: sans-serif;
-      color: #222;
-      z-index: 10;
-      pointer-events: none;
-    }
-
-    #score {
-      top: 2%;
-      left: 4%;
-    }
-
-    #lives {
-      top: 8%;
-      left: 4%;
-    }
-
-    #gameOver {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: clamp(30px, 6vw, 50px);
-      color: darkred;
-      display: none;
-      text-align: center;
-      z-index: 10;
-    }
-
-    #restartBtn {
-      margin-top: 12px;
-      padding: 10px 24px;
-      font-size: clamp(16px, 4vw, 28px);
-      cursor: pointer;
-      pointer-events: auto;
-    }
-  </style>
-</head>
-<body>
-  <div class="frame-container">
-    <div id="game">
-      <div id="score">Score: 0</div>
-      <div id="lives">Lives: ❤️❤️❤️</div>
-      <div id="gameOver">
-        Game Over<br />
-        <button id="restartBtn">Restart</button>
-      </div>
-      <img id="girl" src="suzannewitharm.png" />
-    </div>
-  </div>
-
-  <script>
-    const game = document.getElementById("game");
-    const girl = document.getElementById("girl");
-    const scoreDisplay = document.getElementById("score");
-    const livesDisplay = document.getElementById("lives");
-    const gameOverScreen = document.getElementById("gameOver");
-    const restartBtn = document.getElementById("restartBtn");
-
-    const flowerImgs = ["flower1.png", "flower2.png", "flower3.png"];
-    const fallSpeed = 8;
-
-    let score = 0;
-    let lives = 3;
-    let gameRunning = true;
-
-    function getSizes() {
-      return {
-        gameW: game.clientWidth,
-        gameH: game.clientHeight,
-        girlW: girl.clientWidth,
-        girlH: girl.clientHeight,
-        flowerW: game.clientWidth * 0.38
-      };
-    }
-
-    let girlX = 0;
-
-    function moveGirl(x) {
-      if (!gameRunning) return;
-      const rect = game.getBoundingClientRect();
-      const mouseX = x - rect.left;
-      const { gameW, girlW } = getSizes();
-      girlX = Math.min(Math.max(0, mouseX - girlW / 2), gameW - girlW);
-      girl.style.left = `${girlX}px`;
-    }
-
-    function dropFlower() {
-      if (!gameRunning) return;
-
-      const { gameW, gameH, girlW, girlH, flowerW } = getSizes();
-
-      const flower = document.createElement("img");
-      flower.src = flowerImgs[Math.floor(Math.random() * flowerImgs.length)];
-      flower.className = "flower";
-      game.appendChild(flower);
-
-      let x = Math.random() * (gameW - flowerW);
-      let y = -flowerW;
-      flower.style.left = `${x}px`;
-      flower.style.top = `${y}px`;
-
-      const interval = setInterval(() => {
-        if (!gameRunning) {
-          flower.remove();
-          clearInterval(interval);
-          return;
-        }
-
-        y += fallSpeed;
-        flower.style.top = `${y}px`;
-
-        const flowerCenterX = x + flowerW / 2;
-        const flowerCenterY = y + flowerW / 2;
-
-        const extraHeight = girlH * 0.4;
-        const girlTop = gameH - girlH - extraHeight;
-        const girlBottom = gameH;
-        const girlRight = girlX + girlW;
-        const girlLeft = girlX;
-
-        const collision =
-          flowerCenterY >= girlTop &&
-          flowerCenterY <= girlBottom &&
-          flowerCenterX >= girlLeft &&
-          flowerCenterX <= girlRight;
-
-        const missed = y > gameH;
-
-        if (collision) {
-          score++;
-          scoreDisplay.textContent = `Score: ${score}`;
-          flower.remove();
-          clearInterval(interval);
-        } else if (missed) {
-          lives--;
-          updateLives();
-          flower.remove();
-          clearInterval(interval);
-          if (lives <= 0) {
-            gameOver();
-          }
-        }
-      }, 16);
-    }
-
-    function updateLives() {
-      livesDisplay.textContent = `Lives: ${"❤️".repeat(lives)}`;
-    }
-
-    function gameOver() {
-      gameRunning = false;
-      gameOverScreen.style.display = "block";
-    }
-
-    function restartGame() {
-      score = 0;
-      lives = 3;
-      gameRunning = true;
-      scoreDisplay.textContent = "Score: 0";
-      updateLives();
-      gameOverScreen.style.display = "none";
-    }
-
-    restartBtn.addEventListener("click", restartGame);
-
-    // 绑定鼠标和触摸控制
-    const container = document.querySelector(".frame-container");
-    container.addEventListener("mousemove", (e) => moveGirl(e.clientX));
-    container.addEventListener("touchmove", (e) => {
-      if (e.touches.length > 0) {
-        moveGirl(e.touches[0].clientX);
-      }
-    });
-
-    setInterval(dropFlower, 800);
-    updateLives();
-  </script>
-</body>
-</html>
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Catch the Flowers</title>
     <style>
       * {
         box-sizing: border-box;
-        touch-action: manipulation;
       }
 
       body {
@@ -258,16 +14,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: 97vh;
         overflow: hidden;
       }
 
       .frame-container {
         position: relative;
-        width: min(100vw, 600px);
-        height: calc(min(100vw, 600px) * 1.5);
-        background-image: url("backg.png"); /* 替换成你的背景图 */
-        background-size: contain;
+        width: 600px;
+        height: 900px;
+        background-image: url("backg.png");
+        background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         overflow: hidden;
@@ -275,10 +31,10 @@
 
       #game {
         position: absolute;
-        top: 13%;
-        left: 20%;
-        width: 60%;
-        height: 75%;
+        top: 90px;
+        left: 60px;
+        width: 480px;
+        height: 743px;
         overflow: hidden;
         pointer-events: none;
       }
@@ -286,55 +42,63 @@
       #girl {
         position: absolute;
         bottom: 0;
-        width: 20%;
+        width: 100px;
         pointer-events: auto;
       }
 
       .flower {
         position: absolute;
-        width: 30%;
+        width: 300px;
         pointer-events: auto;
       }
 
       #score,
       #lives {
         position: absolute;
-        font-size: clamp(14px, 2.5vw, 24px);
+        left: 10px;
+        font-size: 20px;
         font-family: sans-serif;
-        color: #222;
-        z-index: 10;
+        color: #333;
         pointer-events: none;
       }
 
       #score {
-        top: 3%;
-        left: 5%;
+        top: 10px;
       }
 
       #lives {
-        top: 10%;
-        left: 5%;
+        top: 40px;
       }
 
       #gameOver {
         position: absolute;
-        top: 40%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: clamp(20px, 4vw, 48px);
+        font-size: 32px;
         color: darkred;
         display: none;
         text-align: center;
         z-index: 10;
-        line-height: 1.4;
       }
 
       #restartBtn {
-        margin-top: 12px;
+        margin-top: 10px;
         padding: 8px 16px;
-        font-size: clamp(16px, 2.5vw, 28px);
+        font-size: 18px;
         cursor: pointer;
         pointer-events: auto;
+      }
+      @media (max-width: 768px) {
+        .frame-container {
+          zoom: 1.5; /* 放大 1.5 倍适配小屏幕 */
+        }
+      }
+
+      @media (max-width: 480px) {
+        .frame-container {
+          zoom: 1.8; /* 手机屏幕上放大更多 */
+        }
       }
     </style>
   </head>
@@ -353,6 +117,7 @@
 
     <script>
       const game = document.getElementById("game");
+      const frame = document.querySelector(".frame-container");
       const girl = document.getElementById("girl");
       const scoreDisplay = document.getElementById("score");
       const livesDisplay = document.getElementById("lives");
@@ -360,60 +125,48 @@
       const restartBtn = document.getElementById("restartBtn");
 
       const flowerImgs = ["flower1.png", "flower2.png", "flower3.png"];
+      const flowerSize = 300;
+      const girlWidth = 100;
+      const girlHeight = 98;
       const fallSpeed = 8;
+      const paddingX = 0;
 
       let score = 0;
       let lives = 3;
+      let girlX = game.clientWidth / 2 - girlWidth / 2;
       let gameRunning = true;
-      let girlX = game.clientWidth / 2;
 
       girl.style.left = `${girlX}px`;
 
-      function updateLives() {
-        livesDisplay.textContent = `Lives: ${"❤️".repeat(lives)}`;
-      }
-
-      function gameOver() {
-        gameRunning = false;
-        gameOverScreen.style.display = "block";
-      }
-
-      function restartGame() {
-        score = 0;
-        lives = 3;
-        gameRunning = true;
-        scoreDisplay.textContent = "Score: 0";
-        updateLives();
-        gameOverScreen.style.display = "none";
-      }
-
-      restartBtn.addEventListener("click", restartGame);
-
-      function moveGirl(x) {
+      function updateGirlPosition(mouseX) {
         if (!gameRunning) return;
-        const rect = game.getBoundingClientRect();
-        const mouseX = x - rect.left;
-        const girlWidth = girl.clientWidth;
-        girlX = Math.min(
+        const newX = Math.min(
           Math.max(0, mouseX - girlWidth / 2),
           game.clientWidth - girlWidth
         );
+        girlX = newX;
         girl.style.left = `${girlX}px`;
       }
 
-      document
-        .querySelector(".frame-container")
-        .addEventListener("mousemove", (e) => {
-          moveGirl(e.clientX);
-        });
+      // 鼠标控制
+      frame.addEventListener("mousemove", (e) => {
+        const rect = game.getBoundingClientRect();
+        const x = e.clientX - rect.left;
+        updateGirlPosition(x);
+      });
 
-      document
-        .querySelector(".frame-container")
-        .addEventListener("touchmove", (e) => {
-          if (e.touches.length > 0) {
-            moveGirl(e.touches[0].clientX);
-          }
-        });
+      // 触屏控制
+      frame.addEventListener(
+        "touchmove",
+        (e) => {
+          if (!gameRunning) return;
+          e.preventDefault();
+          const rect = game.getBoundingClientRect();
+          const x = e.touches[0].clientX - rect.left;
+          updateGirlPosition(x);
+        },
+        { passive: false }
+      );
 
       function dropFlower() {
         if (!gameRunning) return;
@@ -423,7 +176,6 @@
         flower.className = "flower";
         game.appendChild(flower);
 
-        const flowerSize = flower.clientWidth || game.clientWidth * 0.3;
         let x = Math.random() * (game.clientWidth - flowerSize);
         let y = -flowerSize;
         flower.style.left = `${x}px`;
@@ -439,20 +191,20 @@
           y += fallSpeed;
           flower.style.top = `${y}px`;
 
-          const flowerRect = flower.getBoundingClientRect();
-          const girlRect = girl.getBoundingClientRect();
-          const gameRect = game.getBoundingClientRect();
+          const flowerCenterX = x + flowerSize / 2;
+          const flowerCenterY = y + flowerSize / 2;
 
-          const flowerCenterX = flowerRect.left + flowerRect.width / 2;
-          const flowerCenterY = flowerRect.top + flowerRect.height * 0.8;
+          const extraHeight = 60;
+          const girlTop = game.clientHeight - girlHeight - extraHeight;
+          const girlLeft = girlX + paddingX;
+          const girlRight = girlX + girlWidth - paddingX;
 
           const collision =
-            flowerCenterX >= girlRect.left &&
-            flowerCenterX <= girlRect.right &&
-            flowerCenterY >= girlRect.top &&
-            flowerCenterY <= girlRect.bottom;
+            flowerCenterY >= girlTop &&
+            flowerCenterX >= girlLeft &&
+            flowerCenterX <= girlRight;
 
-          const missed = flowerRect.top > gameRect.bottom;
+          const missed = y > game.clientHeight;
 
           if (collision) {
             score++;
@@ -461,16 +213,28 @@
             clearInterval(interval);
           } else if (missed) {
             lives--;
-            updateLives();
+            livesDisplay.textContent = `Lives: ${"❤️".repeat(lives)}`;
             flower.remove();
             clearInterval(interval);
-            if (lives <= 0) gameOver();
+            if (lives === 0) {
+              gameRunning = false;
+              gameOverScreen.style.display = "block";
+            }
           }
         }, 16);
       }
 
-      setInterval(dropFlower, 800);
-      updateLives();
+      setInterval(dropFlower, 600);
+
+      restartBtn.addEventListener("click", () => {
+        score = 0;
+        lives = 3;
+        gameRunning = true;
+        scoreDisplay.textContent = `Score: ${score}`;
+        livesDisplay.textContent = `Lives: ${"❤️".repeat(lives)}`;
+        gameOverScreen.style.display = "none";
+      });
     </script>
   </body>
-</html> -->
+</html>
+
