--- a/index.html
+++ b/index.html
@@ -89,16 +89,21 @@
         cursor: pointer;
         pointer-events: auto;
       }
-      @media (max-width: 768px) {
-        .frame-container {
-          zoom: 1.5; /* 放大 1.5 倍适配小屏幕 */
-        }
-      }
+   
+@media (max-width: 768px) {
+  .frame-container {
+    transform: scale(1.6);
+    transform-origin: top center;
+  }
+}
 
-      @media (max-width: 480px) {
-        .frame-container {
-          zoom: 1.8; /* 手机屏幕上放大更多 */
-        }
+@media (max-width: 480px) {
+  .frame-container {
+    transform: scale(1.9);
+    transform-origin: top center;
+  }
+}
+
       }
     </style>
   </head>
